# mulle-env

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  CMakePackage.txt  README.md  RELEASENOTES.md  install.sh  installer  mudo  mulle-env  mulle-env-completion.sh  mulle-env.sublime-project
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
cola/: description.md.bud  environment.md.bud  executables.md.bud  info.md.bud  init.md.bud  packages.md.bud  properties.plist  style.md.bud  tool.md.bud  usage.md.bud
dox/: Makefile  mulle-env-overview.dot
dox/reference/: TODO.md  cd.md  clean.md  environment.md  hostname.md  index.md  init.md  migrate.md  plugin.md  reset.md  scope.md  shell.md  status.md  style.md  tool.md  uname.md  unveil.md  upgrade.md  username.md  version.md
mulle-project/: formula-info.sh  generate-formula.sh
src/: PLUGIN_README.md  mulle-env-bash-completion.sh  mulle-env-cd.sh  mulle-env-clean.sh  mulle-env-environment.sh  mulle-env-init.sh  mulle-env-migrate.sh  mulle-env-plugin.sh  mulle-env-plugins.sh  mulle-env-scope.sh  mulle-env-shell  mulle-env-style.sh  mulle-env-tool.sh  mulle-env-tool2.sh  mulle-env-unveil.sh  mulle-env-upgrade.sh  mulle-plugins.sh
src/plugins/: developer.sh  minimal.sh  mulle.sh  none.sh
test/: run-test
test/01-init/: run-test
test/02-environment-set/: run-test
test/03-environment-remove/: run-test
test/04-environment-default/: run-test
test/05-stylechange/: run-test
test/06-environment-inherit/: run-test
test/07-call-c/: run-test
test/10-tool/: run-test
test/10-tool2/: run-test
test/11-scope/: run-test
test/12-scopes/: run-test
test/20-mudo/: run-test
test/30-pass-thru/: run-test
