cmake_minimum_required( VERSION 3.0)

project( mulle-env NONE)

execute_process( COMMAND ./mulle-env version
                 WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}"
                 OUTPUT_VARIABLE MULLE_ENV_VERSION
                 OUTPUT_STRIP_TRAILING_WHITESPACE)
message( STATUS "MULLE_ENV_VERSION is ${MULLE_ENV_VERSION} according to mulle-env")


set( PROJECT_VERSION "${MULLE_ENV_VERSION}")


set( SCRIPTS
mulle-env
)

set( LIBRARY_SCRIPTS
src/mulle-env-shell
)


INSTALL( FILES ${SCRIPTS}
PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
            GROUP_EXECUTE GROUP_READ
            WORLD_EXECUTE WORLD_READ
DESTINATION "bin")


INSTALL( FILES ${LIBRARY_SCRIPTS}
PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
            GROUP_EXECUTE GROUP_READ
            WORLD_EXECUTE WORLD_READ
DESTINATION "libexec/mulle-env")
