cmake_minimum_required( VERSION 3.15)

project( mulle-env VERSION 5.3.0 LANGUAGES NONE)

execute_process( COMMAND ./mulle-env version
                 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
                 OUTPUT_VARIABLE MULLE_ENV_VERSION
                 OUTPUT_STRIP_TRAILING_WHITESPACE)
message( STATUS "MULLE_ENV_VERSION is ${MULLE_ENV_VERSION} according to mulle-env")


set( PROJECT_VERSION "${MULLE_ENV_VERSION}")


set( SCRIPTS
mulle-env
mudo
)


file( GLOB LIBRARY_SCRIPTS
   "src/*.sh"
   "src/mulle-env-shell"
)


file( GLOB PLUGIN_SCRIPTS
   "src/plugins/*.sh"
)

file( GLOB SHARE_PLUGIN_FILES
   "src/PLUGIN_README.md"
)



INSTALL( FILES ${SCRIPTS}
PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
            GROUP_EXECUTE GROUP_READ
            WORLD_EXECUTE WORLD_READ
DESTINATION "bin")


INSTALL( FILES ${LIBRARY_SCRIPTS}
PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
            GROUP_EXECUTE GROUP_READ
            WORLD_EXECUTE WORLD_READ
DESTINATION "libexec/mulle-env")


INSTALL( FILES ${PLUGIN_SCRIPTS}
PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
            GROUP_EXECUTE GROUP_READ
            WORLD_EXECUTE WORLD_READ
DESTINATION "libexec/mulle-env/plugins")


INSTALL( FILES ${SHARE_PLUGIN_FILES}
PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
            GROUP_EXECUTE GROUP_READ
            WORLD_EXECUTE WORLD_READ
DESTINATION "share/mulle-env/plugins")


######
#
# must be after CPACK_PACKAGE_VERSION
include( CMakePackage.cmake)
include( CPack)
